# -Remas-Alanazi-protfolio

./: .breakpoints  .replit  LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
templates/: banner.html  bootstrap.html  contactme.html  home.html  message_submitted.html  myprojects.html  projectdetails.html
