[tool.poetry]
name = "repl-nix-remas-alanazi-protfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_remas_alanazi_protfolio"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
